Add dragen mode

--- a/conf/modules/haplotypecaller.config
+++ b/conf/modules/haplotypecaller.config
@@ -16,7 +16,8 @@
 process {
 
     withName: 'GATK4_HAPLOTYPECALLER' {
-        ext.args         = { params.joint_germline ? "-ERC GVCF" : "" }
+        ext.args         = [ { params.joint_germline ? "-ERC GVCF" : ""          }, 
+                             { params.dragen_mode    ? "--dragen-mode true" : "" } ].join(' ').trim()
         ext.prefix       = { meta.num_intervals <= 1 ? ( params.joint_germline ? "${meta.id}.haplotypecaller.g" : "${meta.id}.haplotypecaller" ) : ( params.joint_germline ? "${meta.id}.haplotypecaller.${intervals.simpleName}.g" :"${meta.id}.haplotypecaller.${intervals.simpleName}" ) }
         ext.when         = { params.tools && params.tools.split(',').contains('haplotypecaller') }
         publishDir       = [
@@ -36,21 +37,34 @@ process {
         ]
     }
 
-    withName: 'CNNSCOREVARIANTS' {
-        publishDir       = [
-            // Otherwise it gets published
-            enabled: false
-        ]
-    }
+    if (params.dragen_mode) {
+        withName: 'DRAGENFILTER' {
+            ext.prefix   = {"${meta.id}.haplotypecaller"}
+            // filter per recommendation at https://gatk.broadinstitute.org/hc/en-us/articles/4407897446939--How-to-Run-germline-single-sample-short-variant-discovery-in-DRAGEN-mode
+            ext.args     = { "--filter-expression \"QUAL < 10.4139\" --filter-name \"DRAGENHardQUAL\" " }
+            publishDir       = [
+                mode: params.publish_dir_mode,
+                path: { "${params.outdir}/variant_calling/haplotypecaller/${meta.id}/"},
+                pattern: "*{vcf.gz,vcf.gz.tbi}"
+            ]
+        }
+    } else {
+        withName: 'CNNSCOREVARIANTS' {
+            publishDir       = [
+                // Otherwise it gets published
+                enabled: false
+            ]
+        }
 
-    withName: 'FILTERVARIANTTRANCHES' {
-        ext.prefix       = {"${meta.id}.haplotypecaller"}
-        ext.args         = { "--info-key CNN_1D" }
-        publishDir       = [
-            mode: params.publish_dir_mode,
-            path: { "${params.outdir}/variant_calling/haplotypecaller/${meta.id}/"},
-            pattern: "*{vcf.gz,vcf.gz.tbi}"
-        ]
+        withName: 'FILTERVARIANTTRANCHES' {
+            ext.prefix       = {"${meta.id}.haplotypecaller"}
+            ext.args         = { "--info-key CNN_1D" }
+            publishDir       = [
+                mode: params.publish_dir_mode,
+                path: { "${params.outdir}/variant_calling/haplotypecaller/${meta.id}/"},
+                pattern: "*{vcf.gz,vcf.gz.tbi}"
+            ]
+        }
     }
 
     if (params.tools && params.tools.split(',').contains('haplotypecaller')) {
